--- a/13-webpack的使用/03-webpack的loader/package.json
+++ b/13-webpack的使用/03-webpack的loader/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^3.0.0",
+    "file-loader": "^5.1.0",
+    "less": "^4.1.0",
+    "less-loader": "^4.1.0",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^3.6.0"
   }
 }
